--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -1,31 +1,11 @@
-@(projects: List[Project], todoTasks: List[Task], user: User)
+@(user: User)
 
-@main(projects, user){
+@main(user){
     
     <header>
         <hgroup>
-            <h1>Dashboard</h1>
-            <h2>Modules over all Templates</h2>
+            <h1>Welcome</h1>
         </hgroup>
     </header>
-    
-    <article  class="tasks">
-        @todoTasks.groupBy(_.project).map {
-            case (project, tasks) => {
-                <div class="folder" data-folder-id="@project.id">
-                    <header>
-                        <h3><a href="#@routes.Tasks.index(project.id)">@project.name</a></h3>
-                        <span class="loader">Loading</span>
-                    </header>
-                    <ul class="list">
-                        @tasks.map { task =>
-                            @views.html.tasks.item(task, isEditable = false)
-                        }
-                    </ul>
-                </div>
-            }
-        }
-    </article>
-    
 }
 
