--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,12 +18,12 @@
             <dl id="user">
                 <dt>@user.name <span>(@user.email)</span></dt>
                 <dd>
-                    <a href="@routes.Application.logout()">Logout</a>
+                    <a href="@routes.Application.logout()">退出</a>
                 </dd>
             </dl>
         </header>
         <nav>
-            <h4 class="dashboard"><a href="#/">Home</a></h4>
+            <h4 class="dashboard"><a href="#/">主页</a></h4>
             <ul id="projects">
                 <li>
                     <span class="toggle"></span>
@@ -32,8 +32,7 @@
                     <dl class="options">
                         <dt>Options</dt>
                         <dd>
-                            <button class="newProject">New project</button>
-                            <button class="deleteGroup">Remove group</button>
+                            <button class="newDocument">上传新文档</button>
                         </dd>
                     </dl>
                     <ul>
