--- a/app/views/documents/detail.scala.html
+++ b/app/views/documents/detail.scala.html
@@ -1,4 +1,4 @@
-@(document: Document)
+@(document: Module)
 
 
 <header>
@@ -6,4 +6,17 @@
         <h1>@document.name</h1>
     </hgroup>
 </header>
+
+<div class="folder">
+    <header>
+        <h3><a href="#/projects/2/tasks">模块名字</a></h3>
+        <span class="loader">Loading</span>
+    </header>
+    <ul class="list">
+        <li data-task-id="1003">
+            <h4>Check 1.2.4-RC2</h4>
+            <time datetime="Fri Nov 18 08:00:00 CST 2011">十一月 18 2011</time>
+        </li>
+    </ul>
+</div>
 
