--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -7,6 +7,7 @@
 @import 'libs/_reset.less';
 @import 'libs/_mate.less';
 @import 'libs/_theme.less';
+@import 'libs/_modal.less';
 
 // ----------------------- MAIN STYLES
 body {
