--- a/app/assets/stylesheets/apps/_tasks.less
+++ b/app/assets/stylesheets/apps/_tasks.less
@@ -134,4 +134,12 @@
             right: 6px;
         }
     }
+
+    .questions{
+        background-color:#fff;
+        border-radius:5px;
+        padding:10px;
+        margin-top:10px;
+        line-height:24px;
+    }
 }
