--- a/app/assets/stylesheets/libs/_reset.less
+++ b/app/assets/stylesheets/libs/_reset.less
@@ -7,6 +7,7 @@ blockquote:before, blockquote:after, q:before, q:after {content: "";}
 blockquote, q {quotes: "" "";}
 ol, ul {list-style: none;}
 hr {display: none; visibility: hidden;}
+.hide{display:none;}
 
 
 
