--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="@routes.Assets.at("javascripts/jquery-play-1.7.1.js")"></script>
         <script type="text/javascript" src="@routes.Assets.at("javascripts/underscore-min.js")"></script>
         <script type="text/javascript" src="@routes.Assets.at("javascripts/backbone-min.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.at("javascripts/modal.js")"></script>
         <script type="text/javascript" src="@routes.Assets.at("javascripts/main.js")"></script>
         <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
     </head>
@@ -48,6 +49,20 @@
         <section id="main">
             @body
         </section>
+
+            <div id="responsive" class="modal hide fade modal-overflow in" tabindex="-1" data-width="760"  aria-hidden="false">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <h3>Responsive</h3>
+                </div>
+                <div class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" data-dismiss="modal" class="btn">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
     </body>
 </html>
 
