--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -35,3 +35,4 @@ a {
 @import 'apps/_tasks.less';         // Tasks 
 @import 'apps/_document.less';      // Document
 @import 'apps/_fileuploader.less';      // fileupload
+@import 'apps/_question.less';      // question
