--- a/app/views/documents/detail.scala.html
+++ b/app/views/documents/detail.scala.html
@@ -1,4 +1,4 @@
-@(document: Module)
+@(document:mock.Module)
 
 
 <header>
@@ -7,24 +7,37 @@
     </hgroup>
 </header>
 <article class="tasks">
-<div class="folder">
-    <header>
-        <h3><a href="#/projects/2/tasks">模块名字</a></h3>
-        <span class="loader">Loading</span>
-    </header>
-    <ul class="list">
-        <li data-task-id="1003">
-            <!--<h4>Check 1.2.4-RC2</h4>-->
-            <!--<time datetime="Fri Nov 18 08:00:00 CST 2011">十一月 18 2011</time>-->
+    @if(document.getModuleList!=null){
+        @for(module <- document.getModuleList()){
+            <div class="folder">
+                <header>
+                    <h3><a href="">@module.name</a></h3>
+                    <span class="loader">Loading</span>
+                </header>
+                @if(module.getQuestionList()!=null){
+                    @for(question <- module.getQuestionList()){
+                        <ul class="list">
+                            <li>
+                                <!--<h4>Check 1.2.4-RC2</h4>-->
+                                <!--<time datetime="Fri Nov 18 08:00:00 CST 2011">十一月 18 2011</time>-->
+                                <h4>@question.context <a href="javascript:;" class="J_question_edit" data-id="@question.questionId">编辑问题</a></h4>
+                                <dl class="questions">
+                                    <dt>你的性别？</dt>
+                                    <dd>A.男</dd>
+                                    <dd>B.女</dd>
+                                </dl>
+                            </li>
+                        </ul>
+                    }
+                }
+            </div>
+        }
+    }else{
+        <h3>没有模块</h3>
+    }
 
-            <h4>甲方：____ <a href="javascript:;" class="J_question_edit">编辑问题</a></h4>
-            <dl class="questions">
-                <dt>你的性别？</dt>
-                <dd>A.男</dd>
-                <dd>B.女</dd>
-            </dl>
-        </li>
-    </ul>
-</div>
+
+
+
 
 </article>
