--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -9,7 +9,7 @@
     <body>
         
         <header>
-            <a href="@routes.Application.index" id="logo"><span>law</span>bingo</a>
+            <a href="@routes.Documents.view" id="logo"><span>law</span>bingo</a>
         </header>
         
         @helper.form(routes.Application.authenticate) {
