--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <header>
-            <a href="@routes.Application.index" id="logo"><span>law</span>bingo</a>
+            <a href="@routes.Documents.view" id="logo"><span>law</span>bingo</a>
             <dl id="user">
                 <dt>@user.name <span>(@user.email)</span></dt>
                 <dd>
@@ -52,15 +52,15 @@
 
             <div id="responsive" class="modal hide fade modal-overflow in" tabindex="-1" data-width="760"  aria-hidden="false">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">关闭</button>
                     <h3>Responsive</h3>
                 </div>
                 <div class="modal-body">
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" data-dismiss="modal" class="btn">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" data-dismiss="modal" class="btn">关闭</button>
+                    <button type="button" class="btn btn-primary">保存</button>
                 </div>
             </div>
     </body>
