--- a/app/views/upload/view.scala.html
+++ b/app/views/upload/view.scala.html
@@ -1,7 +1,7 @@
 @(message: String)
 <header>
     <hgroup>
-        <h1>文件上传</h1>
+        <h1>倒入文档模板</h1>
     </hgroup>
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
     <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
