--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,6 +11,8 @@
         <script type="text/javascript" src="@routes.Assets.at("javascripts/backbone-min.js")"></script>
         <script type="text/javascript" src="@routes.Assets.at("javascripts/modal.js")"></script>
         <script type="text/javascript" src="@routes.Assets.at("javascripts/main.js")"></script>
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+    	<script src="@routes.Assets.at("javascripts/fileuploader.js")" type="text/javascript"></script>
         <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
     </head>
     <body>
@@ -33,7 +35,20 @@
                     <dl class="options">
                         <dt>Options</dt>
                         <dd>
-                            <button class="newProject" onclick="location.href='#/fileUpload'">上传文件</button>
+                        	<script>        
+    							jQuery(function(){
+        						var uploader = new qq.FileUploader({
+            					element: document.getElementById('file-uploader'),
+           						action: '/service/upload/',
+           						onComplete: function(id, fileName, responseJSON){
+								//alert("文件上传成功");
+								window.location.href="#/documents"
+            					return false;
+           								 },
+        							});           
+    							});     
+							</script> 
+                            <button class="newProject" id="file-uploader">上传文件</button>
                         </dd>
                     </dl>
                     <ul>
