--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,7 +19,7 @@
         		element: document.getElementById('file-uploader'),
           				 action: '/service/upload/',
            				 onComplete: function(id, fileName, responseJSON){
-						 //alert("文件上传成功");
+						 alert("文件上传成功");
 						 window.location.href="#/documents"
             			 return false;
           				 },
