--- a/app/assets/stylesheets/main/_breadcrumb.less
+++ b/app/assets/stylesheets/main/_breadcrumb.less
@@ -17,20 +17,20 @@
             position: relative;
             height: inherit;
             line-height: 40px;
-            margin-left: -25px;
+            margin-left: 5px;
             padding: 0 6px 0 13px;
             font-size: 18px;
             text-shadow: 1px 1px 0 rgba(255,255,255,.5);
-            -webkit-border-image: url(/assets/images/breadcrumb-2.png) 0 30 0 20 stretch stretch;
+            //-webkit-border-image: url(/assets/images/breadcrumb-2.png) 0 30 0 20 stretch stretch;
             -moz-border-image: url(/assets/images/breadcrumb-2.png) 0 30 0 20 stretch stretch;
-            border-image: url(/assets/images/breadcrumb-2.png) 0 30 0 20 stretch stretch;
+            //border-image: url(/assets/images/breadcrumb-2.png) 0 30 0 20 stretch stretch;
             border-width: 0 30px 0 25px;
             color: @titleColor;
             -webkit-user-select: text;
             &:nth-child(2) {
-                -webkit-border-image: url(/assets/images/breadcrumb-1.png) 0 30 0 1 stretch stretch;
-                -moz-border-image: url(/assets/images/breadcrumb-1.png) 0 30 0 1 stretch stretch;
-                border-image: url(/assets/images/breadcrumb-1.png) 0 30 0 2 stretch stretch;
+                //-webkit-border-image: url(/assets/images/breadcrumb-1.png) 0 30 0 1 stretch stretch;
+                //-moz-border-image: url(/assets/images/breadcrumb-1.png) 0 30 0 1 stretch stretch;
+                //border-image: url(/assets/images/breadcrumb-1.png) 0 30 0 2 stretch stretch;
             }
             &:first-child {
                 padding-left: 20px;
