--- a/app/assets/stylesheets/apps/_question.less
+++ b/app/assets/stylesheets/apps/_question.less
@@ -16,4 +16,12 @@
         width:500px;
         height:80px;
     }
+    .options_area{
+        margin-top:10px;
+        line-height:30px;
+    }
+    .options_list{
+        margin-top:10px;
+        padding:10px;
+    }
 }
