--- a/app/assets/stylesheets/apps/_tasks.less
+++ b/app/assets/stylesheets/apps/_tasks.less
@@ -6,6 +6,7 @@
 
 .tasks {
     .folder {
+        .folder{margin-left:10px;margin-top:10px;}
         .box();
         > header {
             position: relative;
