--- a/app/assets/stylesheets/apps/_fileuploader.less
+++ b/app/assets/stylesheets/apps/_fileuploader.less
@@ -1,2 +1,10 @@
 .qq-uploader { position:relative; width: 100%; display: inline-block;}
 .qq-upload-button{ margin-right:15px}
+
+.sonic {
+	margin-top: -50px ;
+	margin-left: -50px ;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+}
