--- a/app/views/documents/detail.scala.html
+++ b/app/views/documents/detail.scala.html
@@ -4,7 +4,7 @@
 <header>
     <hgroup id="doc">
         <h1 style="font-size:14px">@document.name</h1>
-        <a style="float:right;text-decoration:underline" href="/service/download/@document.name">Download</a>
+        <a style="float:right;text-decoration:underline" href="/service/download/@helper.urlEncode(document.name)">Download</a>
     </hgroup>
 </header>
 <article class="tasks">
