--- a/app/assets/stylesheets/apps/_tasks.less
+++ b/app/assets/stylesheets/apps/_tasks.less
@@ -143,4 +143,10 @@
         margin-top:10px;
         line-height:24px;
     }
+    .module_title{
+            border-bottom:solid 1px #dbdbdb;
+            line-height:25px;
+            color:#AF9F00;
+            margin-bottom:10px;
+        }
 }
