--- a/app/views/documents/detail.scala.html
+++ b/app/views/documents/detail.scala.html
@@ -38,11 +38,12 @@
 
                 case module:template.Module =>{
                     <header>
-                        <h3 style="display:block;"><a href="">@module.name</a><a style="float:right;text-decoration:underline" href="/service/download/@module.name">Download</a></h3>
+                        <h3 style="display:block;"><a href="">模块 <span style="color:black;">@module.name</span></a><a style="float:right;text-decoration:underline" href="/service/download/@module.name">Download</a></h3>
                         <span class="loader">Loading</span>
                     </header>
                     <ul class="list">
                         <li>
+                            <h5 class="module_title">模块文字</h5>
                             @module.text
                         </li>
                     </ul>
