--- a/app/views/documents/detail.scala.html
+++ b/app/views/documents/detail.scala.html
@@ -10,6 +10,7 @@
 <article class="tasks">
     @displayQuestion(question:template.Question) = {
         <li>
+            <h5 class="module_title">问题上下文</h5>
             <h4>@question.context <a href="javascript:;" class="J_question_edit" data-id="@question.questionId">编辑问题</a></h4>
             <dl class="questions">
                 @defining(Question.getById(question.questionId)){ q=>
@@ -31,6 +32,10 @@
             <div class="folder">
             @item match{
                 case question : template.Question =>{
+                    <header>
+                        <h3 style="display:block;"><a href="javascript:;">问题</a></h3>
+                        <span class="loader">Loading</span>
+                    </header>
                     <ul class="list">
                         @displayQuestion(question)
                     </ul>
@@ -38,7 +43,7 @@
 
                 case module:template.Module =>{
                     <header>
-                        <h3 style="display:block;"><a href="">模块 <span style="color:black;">@module.name</span></a><a style="float:right;text-decoration:underline" href="/service/download/@module.name">Download</a></h3>
+                        <h3 style="display:block;"><a href="javascript:;">模块 <span style="color:black;">@module.name</span></a><a style="float:right;text-decoration:underline" href="/service/download/@module.name">Download</a></h3>
                         <span class="loader">Loading</span>
                     </header>
                     <ul class="list">
