--- a/app/assets/stylesheets/main/_drawer.less
+++ b/app/assets/stylesheets/main/_drawer.less
@@ -130,3 +130,37 @@ body {
     .new();
     margin: 15px 25px;
 }
+
+.downloadLink {
+   border-top: 1px solid #4b8bb3;
+   background: #18425e;
+   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#18425e));
+   background: -webkit-linear-gradient(top, #3e779d, #18425e);
+   background: -moz-linear-gradient(top, #3e779d, #18425e);
+   background: -ms-linear-gradient(top, #3e779d, #18425e);
+   background: -o-linear-gradient(top, #3e779d, #18425e);
+   padding: 4.5px 9px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   color: white;
+   font-size: 11px;
+   font-family: Georgia, serif;
+   text-decoration: none;
+   vertical-align: middle;
+   float:right
+   }
+.downloadLink:hover {
+   border-top-color: #28597a;
+   background: #28597a;
+   color: #ccc;
+   }
+.downloadLink:active {
+   border-top-color: #1b435e;
+   background: #1b435e;
+   }
+   
+ .module_block{
+   .clear();
+ 
+ }
