--- a/app/assets/stylesheets/main/_drawer.less
+++ b/app/assets/stylesheets/main/_drawer.less
@@ -127,7 +127,22 @@ body {
     font-size: 13px;
     white-space:nowrap;
     width:120px;
-    .new();
+    border-top: 1px solid #4b8bb3;
+   background: #18425e;
+   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#18425e));
+   background: -webkit-linear-gradient(top, #3e779d, #18425e);
+   background: -moz-linear-gradient(top, #3e779d, #18425e);
+   background: -ms-linear-gradient(top, #3e779d, #18425e);
+   background: -o-linear-gradient(top, #3e779d, #18425e);
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   color: white;
+   font-size: 11px;
+   font-family: Georgia, serif;
+   text-decoration: none;
+   vertical-align: middle;
+    
     margin: 15px 25px;
 }
 
