--- a/app/assets/stylesheets/apps/_document.less
+++ b/app/assets/stylesheets/apps/_document.less
@@ -1,3 +1,12 @@
+.breadcrumb{
+    position:relative;
+    .downloadLink{
+        position:absolute;
+        right:10px;
+        top:3px;
+    }
+}
+
 .document_list{
     padding:20px;
     li{
@@ -10,5 +19,4 @@
             height:auto;
         }
     }
-
 }
