--- a/app/assets/stylesheets/apps/_question.less
+++ b/app/assets/stylesheets/apps/_question.less
@@ -7,7 +7,7 @@
     td{
     }
     td:first-child{
-        width:60px;
+        width:80px;
         padding:0 10px 0 0;
         text-align:right;
         vertical-align:top;
@@ -23,5 +23,9 @@
     .options_list{
         margin-top:10px;
         padding:10px;
+        li{
+            margin-bottom:5px;
+        }
     }
 }
+
