--- a/app/assets/stylesheets/login.less
+++ b/app/assets/stylesheets/login.less
@@ -1,33 +1,14 @@
-// -----------------------------------
-// LOGIN
-// -----------------------------------
-// author: mda@zenexity.com - 2011
-// -----------------------------------
 
-@import 'libs/_reset.less';
-@import 'libs/_mate.less';
-@import 'libs/_theme.less';
 
 // ----------------------- MAIN STYLES
 body {
-    background: @mainBackground;
-    color: @mainColor;
-    font: @defaultFont;
+    background: #eee;
     -webkit-font-smoothing: antialised;
     -webkit-user-select: none;
 }
 
-a {
-    color: @links;
-    text-decoration: none;
-    &:hover {
-        color: @linksHover;
-    }
-}
-
 p.note {
     margin: 10px auto 0;
-    width: 300px;
     padding: 20px;
     text-align: center;
     color: #445868;
@@ -36,15 +17,14 @@ p.note {
         font-weight: bold;
     }
 }
+.container{
+    padding-top:50px;
+}
 
 form {
-    margin: 100px auto 0;
-    width: 300px;
+    margin:0 auto;
+    width: 350px;
     padding: 20px;
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0,0,0,.3);
-    text-align: center;
     h1 {
         margin: 0 0 10px;
         font-size: 20px;
@@ -65,24 +45,22 @@ form {
         margin-bottom: 10px;
         text-shadow: 1px 1px rgba(0,0,0,.1);
     }
-    input {
-        display: block;
-        width: inherit;
-        padding: 2px;
-        background: rgba(0,0,0,.05);
-        border: 1px solid rgba(0,0,0,.15);
-        box-shadow: 0 1px 2px rgba(0,0,0,.1) inset;
-        border-radius: 3px;
-        font-size: 14px;
-        &:invalid:not(:focus) {
-            border-color: red;
-        }
+    input[type="text"]{
+        margin-bottom: -1px;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        position: relative;
+        font-size: 16px;
+        height: auto;
+        padding: 10px;
+        box-sizing: border-box;
     }
-    button {
-        .button();
-        display: block;
-        width: inherit;
-        font-size: 14px;
+    input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        height: auto;
+        padding: 10px;
     }
 }
 
@@ -93,8 +71,4 @@ nav {
         margin: 0 4px;
     }
 }
-
-// --------------------------- IMPORTS
-@import 'main/_widgets.less';        // Some shared elements
-@import 'main/_header.less';         // Top header + User bar
-
+@import "main/_header.less";
