--- a/app/views/documents/detail.scala.html
+++ b/app/views/documents/detail.scala.html
@@ -1,18 +1,15 @@
 @(document:template.Module)
 @import com.google.gson.Gson;
 
-<header>
-    <hgroup id="doc">
-        <h1 style="font-size:19px">@document.name</h1>
-    </hgroup>
-    <button class="downloadLink" style="float:right" onclick='window.location.href="/service/download/@helper.urlEncode(document.name)"'>下载文档</button>
-</header>
+<ol class="breadcrumb">
+    <li class="active">@document.name <button class="downloadLink btn btn-primary btn-sm" style="float:right" onclick='window.location.href="/service/download/@helper.urlEncode(document.name)"'>下载文档</button></li>
+</ol>
+
 <article class="tasks">
     @displayQuestion(question:template.Question) = {
-        <li>
-            <h5 class="module_title">问题上下文</h5>
-            <h4>@question.context <a href="javascript:;" class="J_question_edit" data-id="@question.questionId">编辑问题</a></h4>
-            <dl class="questions">
+        <li class="list-group-item">
+            <p>@question.context <a href="javascript:;" class="J_question_edit" data-id="@question.questionId">编辑问题</a></p>
+            <dl class="questions well">
                 @defining(Question.getById(question.questionId)){ q=>
                     @if(q!=null){
                         @defining(QuestionDescription.parse(q.description)){qd=>
@@ -29,26 +26,24 @@
 
     @displayList(list:List[Object]) = {
         @for(item <- list){
-            <div class="folder">
+            <div class="panel panel-info">
             @item match{
                 case question : template.Question =>{
-                    <header>
-                        <h3 style="display:block;"><a href="javascript:;">问题</a></h3>
-                        <span class="loader">Loading</span>
-                    </header>
-                    <ul class="list">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">问题</h4>
+                    </div>
+                    <ul class="list-group">
                         @displayQuestion(question)
                     </ul>
                 }
 
                 case module:template.Module =>{
-                    <header>
-                        <h3 class="module_block" style="display:block;">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
                         <a href="javascript:;">模块 <span style="color:black;">@module.name</span></a>
-                        <div style="display:inline-block;float:right">
-                        		<input type="button" class="downloadLink" align="right" onclick='window.location.href="/service/download/@helper.urlEncode(module.name)"' value="下载模块"/>                        	
-                        		<button id="file-uploader-@module.name" type="button" class="downloadLink" align="right">更新模块</button>
-                        		
+                        <div class="download">
+                            <button class="downloadLink btn btn-primary btn-sm"  onclick='window.location.href="/service/download/@helper.urlEncode(module.name)"'>下载模块</button>
+                        	<button class="downloadLink btn btn-primary btn-sm" id="file-uploader-@module.name" >更新模块</button>
                         </div>
                         <script>
                          jQuery(function(){
@@ -64,15 +59,11 @@
         			});           
     			});
                         		</script>
-                        </h3>
-                        <span class="loader">Loading</span>
-                    </header>
-                    <ul class="list">
-                        <li>
-                            <h5 class="module_title">模块文字</h5>
-                            @module.text
-                        </li>
-                    </ul>
+                        </h4>
+                    </div>
+                    <div class="panel-body">
+                        <p>@module.text</p>
+                    </div>
                     @if(module.list!=null){
                         @displayList(module.list)
                     }
