--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -30,6 +30,12 @@ a {
         margin:0;
     }
 }
+.Fix:after{
+    display: block;
+    clear: both;
+    height: 0;
+    content: "\0020";
+}
 
 // --------------------------- IMPORTS
 @import 'main/sidebar.less';
