--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -39,6 +39,9 @@
                 <span class="username">@user.name</span> <span class="email">(@user.email)</span>
                 <a href="@routes.Application.logout()" class="btn btn-default navbar-btn">退出</a>
             </div>
+            <div id="top_loading" style="display:none;">
+                正在加载...
+            </div>
         </header>
         <div class="row">
             <nav class="col-md-2 side-nav">
