--- a/app/assets/stylesheets/main/_header.less
+++ b/app/assets/stylesheets/main/_header.less
@@ -33,3 +33,16 @@ body {
         color:#fff;
     }
 }
+
+#top_loading{
+    position:absolute;
+    top:5px;
+    left:50%;
+    color:#fff;
+    padding-left:50px;
+    margin-left:-57px;
+    height:40px;
+    background:url(/assets/images/toploading.gif) no-repeat 0 0;
+    background-size:40px 40px;
+    line-height:40px;
+}
