--- a/chariot-admin/app/views/documents/detail.scala.html
+++ b/chariot-admin/app/views/documents/detail.scala.html
@@ -46,7 +46,7 @@
                         <a href="javascript:;">模块 <span style="color:black;">@module.name</span></a>
                         <div class="download">
                             <button class="downloadLink btn btn-primary btn-sm"  onclick='window.location.href="/service/download/@helper.urlEncode(module.name)/@module.id"'>下载模块</button>
-                        	<button class="downloadLink btn btn-primary btn-sm" id="file-uploader-@module.name" >更新模块</button>
+                        	<button class="downloadLink btn btn-primary btn-sm" id="file-uploader-@module.id" >更新模块</button>
                         </div>
                         <script>
                          jQuery(function(){
